--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,17 @@
 // Colours
+$dark-grey: #333;
+$grey: #666;
+$dark-blue: #364051;
+$blue: #1c88bf;
+$off-white: #f7f7f7;
+
+// Fonts
+$large-font: 1.8rem;
+$small-font: 1.4rem;
 
 // Measurements
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
-$desktop: 45rem;
+$desktop-breakpoint: 45rem;
